Compute summaries on call/join state pair
This is strictly more general than entry/return pair.

Multiple bugfixes to the summary framework.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/summaries@24000 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c